[package]
name = "repossess"
version = "0.1.0"
authors = ["Manikandan Sundararajan <mani@hey.com>"]
edition = "2018"
readme = "README.md"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.20"
ctrlc = "3.1.7"
url = "2.2.0"
reqwest = {version = "0.10.9", features = ["blocking"]}